# AI-Medical-Diagnosis-Assistant

./: .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  start.bat  start.sh  template.py  test_image_inference.py  test_symptom_inference.py
.github/workflows/: ci.yml  deploy-huggingface.yml  docker-publish.yml
.streamlit/: config.toml
ai_medical_diagnosis_assistant.egg-info/: PKG-INFO  SOURCES.txt
artifacts/checkpoints/: checkpoint_epoch_050.pth
artifacts/checkpoints_nlp/: best_model.pt  clinical_explanations.json  label_encoder.pkl  model_metadata.json  temperature_scaler.json
configs/: app_config.yaml  eda_config.yaml  ingestion_config.yaml  logging_config.json  model_config.yaml  nlp_training_config.yaml  training_config.yaml  transformation_config.yaml  validation_config.yaml
data/processed/: disease_mapping.json
docs/: data_ingestion_pipeline_design.md  data_ingestion_verification.md  dataset_recommendations.md  walkthrough.md
docs/reports/: Classification_Report.csv  Data_Transformation_Report.md  Dataset_Verification_Report.md  EDA_Report.md  Evaluation_Report.md  Metrics.json  NLP_Classification_Report.csv  NLP_Evaluation_Report.md  NLP_Metrics.json  Summary_Report.md  Transformation_Walkthrough.md  Validation_Report.md  Validation_Walkthrough.md  Verification_EDA_Walkthrough.md  validation_statistics.csv  validation_summary.json
notebooks/: BioBERT_Training.ipynb
scripts/: _patch_verify.py  _write_app.py  _write_inference_files.py  _write_nlp_predict_v2.py  _write_verify_script.py  diagnostics.py  generate_colab_notebook.py  merge_symptom_datasets.py  run_optimization_pipeline.py  test_image_inference.py  train_nlp.py  verify_pipelines.py
src/api/: main.py  routes.py  schemas.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  dataset_verification_eda.py  model_evaluation.py  model_trainer.py  nlp_model_trainer.py  pytorch_dataset.py  report_generator.py
src/config/: configuration.py
src/constants/: __init__.py
src/entity/: config_entity.py
src/evaluation/: evaluate.py
(+34 files in other folders)
