[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-medical-diagnosis-assistant"
version = "0.1.0"
description = "A production-grade Multimodal AI Medical Diagnosis Assistant using Clean Architecture."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Healthcare Engineering Team", email = "engineering@medical-assistant.ai" }
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    # Packages defined in requirements.txt
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.13"
mypy_path = "."
explicit_package_bases = true
exclude = [
    "venv",
    "\\.venv"
]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
    "cv2.*",
    "albumentations.*",
    "pytorch_grad_cam.*",
    "reportlab.*",
    "fitz.*",
    "dagshub.*",
    "mlflow.*",
    "transformers.*",
    "sklearn.*",
    "pytest.*"
]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --tb=short --cov=src --cov-report=term-missing"
testpaths = [
    "tests"
]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]
